{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 19,
  "lineage": "2f6e3813-5740-9bb6-e39e-f945cb969c43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a2d575b12196b27",
            "arn": "arn:aws:ec2:us-east-1:975049923571:elastic-ip/eipalloc-04a2d575b12196b27",
            "domain": "vpc",
            "id": "eipalloc-04a2d575b12196b27",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-198-229-55.compute-1.amazonaws.com",
            "public_ip": "44.198.229.55",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-natgw-eip"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-natgw-eip",
              "Owner": "gaston",
              "Project": "ecs-network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:internet-gateway/igw-0be39302409955885",
            "id": "igw-0be39302409955885",
            "owner_id": "975049923571",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-igw"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-igw",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a2d575b12196b27",
            "association_id": "eipassoc-0ec526e283ed5bcf5",
            "connectivity_type": "public",
            "id": "nat-0e5e4ff7ada2aaf38",
            "network_interface_id": "eni-0f8006f79ced72d4e",
            "private_ip": "192.168.10.106",
            "public_ip": "44.198.229.55",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08be0bdee19c014fd",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-natgw"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-natgw",
              "Owner": "gaston",
              "Project": "ecs-network"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv1_nat_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3069715033f3dd01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e5e4ff7ada2aaf38",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d3069715033f3dd0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0d3069715033f3dd0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.priv1",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv2_nat_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0897c24c9668cdb211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e5e4ff7ada2aaf38",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0897c24c9668cdb21",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0897c24c9668cdb21"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.priv2",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be39302409955885",
            "id": "r-rtb-023e233174c36b5fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-023e233174c36b5fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-023e233174c36b5fe"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:route-table/rtb-0d3069715033f3dd0",
            "id": "rtb-0d3069715033f3dd0",
            "owner_id": "975049923571",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-rt-priv1"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-rt-priv1",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "rtb-0d3069715033f3dd0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:route-table/rtb-0897c24c9668cdb21",
            "id": "rtb-0897c24c9668cdb21",
            "owner_id": "975049923571",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-rt-priv2"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-rt-priv2",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "rtb-0897c24c9668cdb21",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:route-table/rtb-023e233174c36b5fe",
            "id": "rtb-023e233174c36b5fe",
            "owner_id": "975049923571",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-rt-pub"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-rt-pub",
              "Owner": "gaston",
              "Project": "ecs-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "rtb-023e233174c36b5fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a5c4237073c489",
            "region": "us-east-1",
            "route_table_id": "rtb-0d3069715033f3dd0",
            "subnet_id": "subnet-06525de573a3b24a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.priv1",
            "aws_subnet.priv1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c534677888035792",
            "region": "us-east-1",
            "route_table_id": "rtb-0897c24c9668cdb21",
            "subnet_id": "subnet-0e0eb7a98fc6e8f4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.priv2",
            "aws_subnet.priv2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09113ba09da681e79",
            "region": "us-east-1",
            "route_table_id": "rtb-023e233174c36b5fe",
            "subnet_id": "subnet-08be0bdee19c014fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pub1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d3800e00a1600e",
            "region": "us-east-1",
            "route_table_id": "rtb-023e233174c36b5fe",
            "subnet_id": "subnet-08a84ff504a7cb0e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pub2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-06525de573a3b24a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06525de573a3b24a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-priv1",
              "Tier": "private"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-priv1",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "private"
            },
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-06525de573a3b24a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-0e0eb7a98fc6e8f4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0eb7a98fc6e8f4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-priv2",
              "Tier": "private"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-priv2",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "private"
            },
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-0e0eb7a98fc6e8f4d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-08be0bdee19c014fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08be0bdee19c014fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-pub1",
              "Tier": "public"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-pub1",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-08be0bdee19c014fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:subnet/subnet-08a84ff504a7cb0e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a84ff504a7cb0e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049923571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-pub2",
              "Tier": "public"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-pub2",
              "Owner": "gaston",
              "Project": "ecs-network",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cb6cab1a8d99b2b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975049923571",
            "id": "subnet-08a84ff504a7cb0e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049923571:vpc/vpc-0cb6cab1a8d99b2b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-026da60625f744777",
            "default_route_table_id": "rtb-07990dfdfbbdafa03",
            "default_security_group_id": "sg-0dc03efa7c3d11261",
            "dhcp_options_id": "dopt-036ce88bfee028b3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb6cab1a8d99b2b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07990dfdfbbdafa03",
            "owner_id": "975049923571",
            "region": "us-east-1",
            "tags": {
              "CostCenter": "lab",
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "CostCenter": "lab",
              "Env": "lab",
              "Name": "ecs-vpc",
              "Owner": "gaston",
              "Project": "ecs-network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}